fix(user): app still need physical_id column to identify if user has paired any tag
